--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1954,7 +1954,7 @@ input, select, textarea {
 	.button {
 		position: relative;
 		display: inline-block;
-		border-radius: 0.35em;
+		border-radius: 2.5em;
 		color: #fff !important;
 		text-decoration: none;
 		padding: 0.5em .5em 0.5em .5em;
@@ -1973,7 +1973,9 @@ input, select, textarea {
 		transition: background-color 0.35s ease-in-out;
 	}
 	.download > i, .download > .button-text {
-		margin: 0 10px;
+		margin: 0 .4em 0 .2em;
+		font-weight: 400;
+		letter-spacing: .1em;
 		display: -webkit-inline-box;
 	}
 
@@ -2360,8 +2362,8 @@ input, select, textarea {
 }
 
 .mySlides {
-	width: 100%;
-	height: auto;
+	width: 60%;
+	height: 311px;
 	margin: .5em auto 0 auto;
 	border-radius: 3px;
 	box-shadow: 3px 4px 10px 1px #24202045;
@@ -2400,7 +2402,7 @@ input, select, textarea {
 	outline: none;
 }
 
-#subpage .links {
+.links {
 	margin: 2em auto;
 	font-weight: 400;
 	color: #666;
@@ -2409,7 +2411,7 @@ input, select, textarea {
 	justify-content: space-evenly;
 }
 
-#subpage .links .link{
+.links .link{
 	font-size: 1em;
 	padding: .5em 4em;
 	text-decoration: none;
@@ -2417,7 +2419,7 @@ input, select, textarea {
 	box-sizing: content-box;
 }
 
-#subpage .links .link:hover{
+.links .link:hover{
 	color: rgb(95, 208, 245);
 }
 
@@ -2426,7 +2428,7 @@ input, select, textarea {
     width: 2em;
     height: 2em;
     border-radius: 2.5em;
-	margin-bottom: 1em;
+	padding: 2 3.5px;
 }
 
 .slideButton:hover{
@@ -2741,6 +2743,59 @@ input, select, textarea {
 				}
 
 	}
+
+/* Modal */
+
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    visibility: hidden;
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+.modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 1rem 1.5rem;
+    width: 50rem;
+    border-radius: 0.5rem;
+}
+.close-button {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    background-color: lightgray;
+}
+.close-button:hover {
+    background-color: darkgray;
+}
+.show-modal {
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.0);
+    transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-text {
+	font-size: 0.8em;
+    line-height: 1.8em;
+	font-weight: 400;
+	padding: 0 3vw;
+}
+
+
+
 
 /* Mobile */
 
