--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2344,7 +2344,7 @@ input, select, textarea {
 }
 	#subpage .row .mySlides{
 		background-size: contain;
-    	height: 394px;	
+    	/* height: 394px;	 */
 	}
 
 #subpage .row h2 {
@@ -2421,7 +2421,8 @@ input, select, textarea {
 
 .centered{
 	display: flex;
-    justify-content: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .social-link{
@@ -2498,7 +2499,7 @@ input, select, textarea {
 
 .right-button {
 	position: absolute;
-    right: 20%;
+    right: 22%;
 }
 
 .left-subpage-button {
