Work on passionrk on Passion projects subpage

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2391,6 +2391,16 @@ input, select, textarea {
 	padding: 0 1em;
 }
 
+.subpage-img{
+	width: 100%;
+	height: auto;
+}
+
+.fixed {
+	height: 350px;
+	width: auto;
+}
+
 
 /* Slides */
 
